# RaytracingOneWeek

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  camera.h  hitable.cpp  hitable.h  main.cpp  material.h  ray.h  vec3.h
